--- a/src/components/video-index/VideoShow.css
+++ b/src/components/video-index/VideoShow.css
@@ -16,4 +16,13 @@
     margin-top: 10px;
     text-align: center;
   }
+
+  .video-item{
+    align-items: center;
+    padding: auto;
+    margin: auto;
+
+  }
+
+
   
